dropdown menus size correctly and project names dont wrap. fixes 1116

--- a/web/css/less/editor/menus.less
+++ b/web/css/less/editor/menus.less
@@ -79,6 +79,7 @@ MENUS
 			max-height:75%;
 			overflow: auto;
 			box-shadow: 5px 5px 10px #111;
+			white-space: nowrap;
 
 			a:link,a:visited,a:active{ color:#333 }
 			a:hover{ color: orangered }
